--- a/packages/components/Input/Money.html
+++ b/packages/components/Input/Money.html
@@ -4,7 +4,9 @@
   bind:value
   on:keyup
   on:input
-  on:keydown="_onKeyup(event)"
+  on:blur
+  on:focus="_onFocus(event)"
+  on:keydown="_onKeydown(event)"
   on:submit="_onSubmit()"
 />
 
@@ -12,17 +14,7 @@
 <script>
   import System from '@mamba/pos/api/system.js';
   import Keyboard from '@mamba/pos/api/keyboard.js';
-
-  const formatMoney = n => {
-    if (typeof n === 'number') {
-      n = n.toFixed(2);
-    }
-
-    return n
-      .toString()
-      .replace('.', ',')
-      .replace(/\B(?=(\d{3})+(?!\d))/g, '.');
-  };
+  import formatMoney from './libs/formatMoney.js';
 
   export default {
     components: {
@@ -37,6 +29,7 @@
       };
     },
     computed: {
+      /* istanbul ignore next */
       _inputProps: ({
         rawValue,
         prefix,
@@ -51,10 +44,32 @@
     },
     methods: {
       focus() {
+        /* istanbul ignore next */
         this.refs.amountInput.focus();
       },
       blur() {
+        /* istanbul ignore next */
         this.refs.amountInput.blur();
+      },
+      _onFocus(e) {
+        const { value } = this.get();
+        const endPosition = value.length;
+
+        setTimeout(() => {
+          /**
+           * Since we have to move the setSelectionRange to the end of the execution queue,
+           * we must check if there's a 'amountInput' component
+           * still rendered (it could have been destroyed).
+           */
+          if (this.refs.amountInput) {
+            this.refs.amountInput.refs.input.setSelectionRange(
+              endPosition,
+              endPosition,
+            );
+          }
+        });
+
+        this.fire('focus', e);
       },
       _onSubmit() {
         const { rawValue, value } = this.get();
@@ -64,8 +79,8 @@
           System.beep();
         }
       },
-      _onKeyup(e) {
-        if (this.refs.amountInput.refs.input.readOnly === true) {
+      _onKeydown(e) {
+        if (this.refs.amountInput.get().readonly === true) {
           return;
         }
 
