Move scrollbar hide css to simulator's view plugin

--- a/packages/pos/simulator/plugins/view/Launcher.html
+++ b/packages/pos/simulator/plugins/view/Launcher.html
@@ -1,5 +1,5 @@
 {#if STATE === STATES.APP}
-  <div ref:approot id="app-root"></div>
+  <div ref:approot id="app-root" class="hide-scrollbar"></div>
 {:else}
   <div class="launcher">
     {#if STATE === STATES.LOCKSCREEN}
