Fix disabled button color

--- a/packages/components/Button/Button.html
+++ b/packages/components/Button/Button.html
@@ -78,12 +78,7 @@
 
   button[disabled] {
     cursor: not-allowed;
-    /* stylelint-disable-next-line declaration-no-important */
-    background-color: $gray-light !important;
-    /* stylelint-disable-next-line declaration-no-important */
-    color: $gray !important;
-    /* stylelint-disable-next-line declaration-no-important */
-    border: none !important;
+    opacity: 0.5;
   }
 
   button.is-fixed {
