--- a/packages/pos/simulator/plugins/view/Launcher.html
+++ b/packages/pos/simulator/plugins/view/Launcher.html
@@ -192,6 +192,11 @@
         width: 50px;
         height: 50px;
         margin: 0 auto;
+
+        img {
+          width: 100%;
+          height: auto;
+        }
       }
     }
 
