Add LoadingSprite component

--- a/packages/components/Sprite/Sprite.html
+++ b/packages/components/Sprite/Sprite.html
@@ -1,4 +1,8 @@
-<div class="sprite" ref:sprite style="background-position: {_position}px 0;"></div>
+<div
+  ref:sprite
+  style="background-position: {_position}px 0;"
+  class="sprite"
+></div>
 
 <script>
   const FPS = 60;
