Move icon assets one directory up

--- a/packages/components/Icon/Icon.html
+++ b/packages/components/Icon/Icon.html
@@ -92,7 +92,7 @@
 
   @each $mb-icon in $icon-list {
     [symbol='#{$mb-icon}'] {
-      mask-image: url(./assets/icons/#{$mb-icon}.svg);
+      mask-image: url(./assets/#{$mb-icon}.svg);
     }
   }
 
