--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -46,7 +46,7 @@
         this._close();
       }
     },
-    onupdate({ changed, current }) {
+    onupdate({ changed, current, previous }) {
       /* istanbul ignore next */
       if (changed.isOpen) {
         if (current.isOpen) {
@@ -70,7 +70,7 @@
 
             this.root.meta.setNavigable(false);
           }
-        } else {
+        } else if (previous) {
           this._close();
           this.fire('close');
         }
@@ -106,7 +106,7 @@
 
         /** Allow app to scroll again */
         /* istanbul ignore else */
-        if (this.root.meta) {
+        if (this.root.meta && _previousNavigationObj != null) {
           /** Let's unlock the app */
           this.root.meta.set({
             navigable: _previousNavigationObj,
