Add new style for payload textarea

--- a/packages/pos/simulator/plugins/view/ControlPanel.html
+++ b/packages/pos/simulator/plugins/view/ControlPanel.html
@@ -166,6 +166,14 @@
       padding-bottom: 5px;
     }
 
+    :global(textarea) {
+      width: 100%;
+      border-radius: 3px;
+      border: none;
+      border-bottom: 1px solid #e3e6e7;
+      background-color: #f5f7f7;
+    }
+
     :global(.controller) {
       display: flex;
       align-items: center;
