Add bottom margin for main control panel controller spans

--- a/packages/pos/simulator/plugins/view/ControlPanel.html
+++ b/packages/pos/simulator/plugins/view/ControlPanel.html
@@ -183,6 +183,11 @@
 
       &.is-full {
         display: block;
+
+        :global(> span) {
+          display: block;
+          margin-bottom: 8px;
+        }
       }
 
       @media (max-width: 400px) {
