--- a/packages/pos/simulator/plugins/view/POS.html
+++ b/packages/pos/simulator/plugins/view/POS.html
@@ -77,7 +77,7 @@
       createDriverPanel(driverSimulation, PanelConstructor) {
         this.refs.controlPanel.add(PanelConstructor, {
           namespace: driverSimulation.NAMESPACE,
-          ...(driverSimulation.SETTINGS || {}),
+          ...JSON.parse(JSON.stringify(driverSimulation.SETTINGS || {})),
         });
       },
     },
