Remove duplicated files

--- a/packages/components/Icon/example/Example.html
+++ b/packages/components/Icon/example/Example.html
@@ -32,8 +32,8 @@
   <h4>Customizados</h4>
 
   <div class="row">
-    <Icon src="assets/icons/account.svg" />
-    <RoundIcon src="assets/icons/account.svg" />
+    <Icon src="assets/account.svg" />
+    <RoundIcon src="assets/account.svg" />
   </div>
 
   <h4>Graduais</h4>
