Split app virtual entry point between environments

--- a/packages/pos/simulator/plugins/view/Launcher.html
+++ b/packages/pos/simulator/plugins/view/Launcher.html
@@ -22,7 +22,7 @@
           <div class="app-item" on:click="openApp(app)">
             <div class="content">
               <div class="icon">
-                <img src="data:image/png;base64,{app.manifest.iconBase64}" alt="{app.manifest.name}">
+                <img src={app.manifest.icon} alt="{app.manifest.name}">
               </div>
               <div class="title">
                 {app.manifest.appName}
