Change goBack and goHome to private methods (#277)

--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -1,6 +1,6 @@
 <header class="appbar" {style}>
   {#if _showBack}
-    <div class="icon-left" on:click="goBack()">
+    <div class="icon-left" on:click="_goBack()">
       <Icon symbol="chevron-left" width="10px" color={textColor} />
     </div>
   {/if}
@@ -10,7 +10,7 @@
   {/if}
 
   {#if _showHome}
-    <div class="icon-right" on:click="goHome()">
+    <div class="icon-right" on:click="_goHome()">
       <Icon symbol={_isAtHome ? 'home' : 'app-home'} color={textColor}/>
     </div>
   {/if}
@@ -85,7 +85,7 @@
       }
     },
     methods: {
-      goHome() {
+      _goHome() {
         const { _isAtHome } = this.get();
         if (_isAtHome) {
           return this.root.close();
@@ -96,7 +96,7 @@
           this.root.router.go('/');
         }
       },
-      goBack() {
+      _goBack() {
         /* istanbul ignore else */
         if (this.root.router) {
           this.root.router.back();
