Rename settings slug

--- a/packages/pos/simulator/plugins/view/Launcher.html
+++ b/packages/pos/simulator/plugins/view/Launcher.html
@@ -59,7 +59,7 @@
     'reprint',
     'reports',
     'closing',
-    'config',
+    'settings',
     'help',
   ].reduce((acc, name, index) => {
     acc[name] = index;
