--- a/packages/pos/simulator/plugins/view/style.pcss
+++ b/packages/pos/simulator/plugins/view/style.pcss
@@ -21,3 +21,10 @@
 :global(.hide-scrollbar) {
   @extend %hide-scrollbar;
 }
+
+:global(.hide-scrollbars) {
+  &,
+  :global(*) {
+    @extend %hide-scrollbar;
+  }
+}
